--- a/Airport Ticket Booking System/Airport Ticket Booking System.csproj
+++ b/Airport Ticket Booking System/Airport Ticket Booking System.csproj
@@ -8,4 +8,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Ardalis.GuardClauses" Version="4.6.0" />
+  </ItemGroup>
+
 </Project>
