--- a/Airport Ticket Booking System/Airport Ticket Booking System.csproj
+++ b/Airport Ticket Booking System/Airport Ticket Booking System.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Ardalis.GuardClauses" Version="4.6.0" />
+    <PackageReference Include="FluentAssertions" Version="6.12.1" />
   </ItemGroup>
 
 </Project>
